[gd_scene load_steps=6 format=3 uid="uid://docvd2mhlftl"]

[ext_resource type="Script" path="res://mod_row.gd" id="1_qa3of"]
[ext_resource type="FontFile" uid="uid://c4p41p37lal62" path="res://assets/RobotoCondensed-Regular.ttf" id="2_5qx5t"]
[ext_resource type="Texture2D" uid="uid://bdvnb3onrllkr" path="res://assets/slot_ring.png" id="2_o13i0"]
[ext_resource type="Texture2D" uid="uid://if3q52peepx7" path="res://assets/slot_glow.png" id="3_1kovp"]
[ext_resource type="Texture2D" uid="uid://bdnpdgku28ncs" path="res://assets/slot_orb.png" id="4_k1q8f"]

[node name="hsplit" type="HSplitContainer"]
layout_direction = 3
offset_right = 169.0
offset_bottom = 32.0
dragger_visibility = 1
script = ExtResource("1_qa3of")

[node name="mod_name" type="Label" parent="."]
custom_minimum_size = Vector2i(120, 0)
layout_mode = 2
offset_right = 128.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5qx5t")
theme_override_font_sizes/font_size = 21
text = "One Hit Wonder
"
horizontal_alignment = 2

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 140.0
offset_right = 172.0
offset_bottom = 32.0

[node name="slot_ring" type="TextureRect" parent="margin"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_o13i0")
stretch_mode = 2

[node name="slot_glow" type="TextureRect" parent="margin"]
modulate = Color(0.231373, 1, 0.231373, 1)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("3_1kovp")
stretch_mode = 2

[node name="slot_orb" type="TextureRect" parent="margin"]
modulate = Color(0.44, 0.44, 0.44, 1)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("4_k1q8f")
stretch_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_hsplit_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_hsplit_mouse_exited"]
